--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
       </header>
       <div class="mainContainer">
         <div class="Container">
+          <img  class="img"
+            src="./assets/namaste-node.webp"
+            alt="image3"
+            width="250"
+            height="200"
+          />
+          <div>
+            <h2>Namaste NodeJS</h2>
+            <!-- <span class="span-tag">(FREE)</span> -->
+          </div>
+          <div>
+            <p>From basics to advanced concepts,gain experienced in building applications.</div>
+            </p>
+            <div> <p class="text-base" style="margin-top: 40px;"><i class="fa-solid fa-globe"></i>English</p></div>
+           
+            <!-- <div>
+              <p class="text-base">4.9<i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i>(1,500+)</p>
+          </div> -->
+          <a class="anchorCourses1" style="margin-top: 60px;" href="https://namastedev.com/learn/namaste-javascript"
+            >ENROLL</a
+          >
+        </div>
+        <div class="Container">
           <img
             class="align-image img"
             src="./assets/Namaste-Frontend-System-Design.jpeg"
@@ -90,7 +113,7 @@
               Join our Namaste React Webseries to master React.js. Learn from
               the ground up and build real-world apps with ease.
             </p>
-            <div> <p class="text-base" style="margin-top: 30px;"><i class="fa-solid fa-globe"></i>English</p></div>
+          <div> <p class="text-base" style="margin-top: 30px;"><i class="fa-solid fa-globe"></i>English</p></div>
           </div>
           <div>
             <p class="text-base">4.8 <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i>(1,500+)</p>
@@ -100,7 +123,8 @@
         <a class="anchorCourses1" href="https://namastedev.com/learn/namaste-react"
             >ENROLL</a
           >
-        </div>
+        </div>  
+        
         <div class="Container">
           <img  class="img"
             src="./assets/njw.png"
